# cppsnake

./: CMakeLists.txt  README.md  main.cpp
include/: application.hpp
include/controllers/: snake_controller.hpp
include/managers/: game_manager.hpp
include/snake/: snake.hpp
src/: CMakeLists.txt  application.cpp
src/controllers/: CMakeLists.txt  snake_controller.cpp
src/managers/: CMakeLists.txt  game_manager.cpp
src/snake/: CMakeLists.txt  snake.cpp
